<resources>
    <string name="app_name">My Book</string>
    <string name="personal_book_title">Personal Book</string>
    <string name="by_yogesh_kohli">By\nYogesh Kohli</string>
    <string name="get_started_title">Continue as Guest</string>
    <string name="about_personal_book">About</string>
    <string name="textviewAboutDetailsString"></string>
    <string name="aboutAppMessage">This application is developed as a final project for Android development Class (Computer Science Department) which comes under Extended Studies - San Diego State University.\n\nThis app aims to provide a seamless experience in which user can create his/her personal notes.\n\nFEATURES:\n\n1. Create customised notes.\n2. Make them password protected.\n3. Edit / Update / Delete Notes.\n4. Save drawing as an image in internal storage.\n\n</string>
    <string name="helpTitle">Help</string>
    <string name="emailString">yogesh22kohli@gmail.com</string>
    <string name="contactString">Contact:</string>
    <string name="aboutNoteString">Please write an email and i will try to get back to you ASAP.</string>
    <string name="textviewDevNameString">Yogesh Kohli</string>
    <string name="textviewDevEmail">yogesh22kohli@gmail.com</string>
    <string name="textviewDevPhoneString">(619) 371-7355</string>
    <string name="textviewAboutDevHeading">About me</string>
    <string name="textviewAboutDevMessage">I am an experienced iOS Developer with a demonstrated history of working in startup. I started iOS development in June 2015. Currently, I am doing Masters in Computer Science from San Diego State University.\n\nWhen i am not working, I like to play my PlayStation 4. Some of my favorite games are FIFA 18, GTA V &amp; Don Bradman Cricket.\n\n\nWebsite: http://yogesh.mrsharky.com\n\nGithub: https://github.com/yogesh2209\n\n</string>
    <string name="todo">TODO</string>
    <string name="drawBtnString">DRAW</string>
    <string name="chapter_name">Chapter Name*</string>
    <string name="passwordDrawNoteScreen">Password</string>
    <string name="set_reminderDrawNoteScreen">SET REMINDER</string>
    <string name="saveDrawNote">SAVE</string>
    <string name="textviewMsgDrawNote">You cannot edit Drawing but you can save your drawing on external storage i.e SD card (if you have). You can aso edit chapter name see the type of chapter and when it is created.</string>
    <string name="your_notes_heading">Your Notes</string>
    <string name="chapterNoteDetail">Chapter</string>
    <string name="textviewContentNoteDetai">TextView</string>
    <string name="textviewDateNoteDetail">TextView</string>
    <string name="textviewPswdNoteDetail">TextView</string>
    <string name="textviewNoteTypeNoteDetail">TextView</string>
    <string name="editButtonNoteDetail">Edit</string>
    <string name="chapter_name_edit_screen">Chapter Name*</string>
    <string name="set_reminder_edit_screen">SET REMINDER</string>
    <string name="password_edit_screen">Password</string>
    <string name="update_edit_screen">UPDATE</string>
    <string name="content_here_edit_screen">Content here</string>
    <string name="delete">DELETE</string>
</resources>
