<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.personalbook.NoteEditScreenActivity"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/editTextTitleNoteEdit"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/chapter_name_edit_screen"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextContentNoteEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetReminderNoteEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="setReminderButtonClicked"
        android:text="@string/set_reminder_edit_screen"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveNoteTextNoteEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordNoteEdit" />

    <EditText
        android:id="@+id/editTextPasswordNoteEdit"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:ems="10"
        android:hint="@string/password_edit_screen"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetReminderNoteEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContentNoteEdit" />

    <Button
        android:id="@+id/buttonSaveNoteTextNoteEdit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="editNoteFinalButtonClicked"
        android:text="@string/update_edit_screen"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetReminderNoteEdit" />

    <EditText
        android:id="@+id/editTextContentNoteEdit"
        android:layout_width="328dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/content_here_edit_screen"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordNoteEdit"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitleNoteEdit" />
</android.support.constraint.ConstraintLayout>
