<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.personalbook.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewPersonalBook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/personal_book_title"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewByName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewByName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/by_yogesh_kohli"
        android:textAlignment="center"
        android:textSize="21sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPersonalBook" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:onClick="getStartedButtonClicked"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/get_started_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewByName" />
</android.support.constraint.ConstraintLayout>
